--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
       - run:
           name: Install Dependencies
           command: go mod download
+          working_directory: api
       - save_cache:
           key: go-mod-v4-{{ checksum "go.sum" }}
           paths:
