--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,11 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+
+orbs:
+  # See: https://github.com/CircleCI-Public/aws-cli-orb
+  aws-cli: circleci/aws-cli@2.0
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
@@ -23,6 +28,14 @@ jobs:
             docker-compose -f ./docker-compose.test.yaml build --no-cache
             docker-compose -f ./docker-compose.test.yaml run sample-api-test
           working_directory: api
+  aws-cli-example:
+    executor: aws-cli/default
+    steps:
+      - checkout
+      - aws-cli/setup:
+          profile-name: example
+      - run: echo "Run your code here"
+      - run: aws --version
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -31,3 +44,7 @@ workflows:
     # Inside the workflow, you define the jobs you want to run.
     jobs:
       - build
+  aws-cli:
+    jobs:
+      - aws-cli-example:
+          context: aws
