--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,8 +22,8 @@ jobs:
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
-      - aws-cli/setup:
-          profile-name: example
+      # - aws-cli/setup:
+      #     profile-name: example
       - run:
           name: "check context"
           command: |
